bindgen/twili.h

/*
  Copyright (c) 2019 misson20000

  Permission to use, copy, modify, and/or distribute this software for any purpose
  with or without fee is hereby granted, provided that the above copyright notice
  and this permission notice appear in all copies.

  THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH
  REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND
  FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT,
  INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS
  OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER
  TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF
  THIS SOFTWARE.
*/

#include<switch/services/sm.h>

#ifdef __cplusplus
extern "C" {
#endif
Result twiliWriteNamedPipe(Service *pipe, const char *ptr, size_t len);
Result twiliCreateNamedOutputPipe(Service *srv_out, const char* name, size_t len);
Result twiliInitialize(void);
void twiliExit(void);

#ifdef __cplusplus
}
#endif